change from mp4 to vp9

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body> 
 
 <div>
-<video controls secondary width=640 height=360 src="./assets/360p.mp4" type="video/mp4"></video>
+<video controls secondary width=640 height=360 src="./assets/360p.webm" type="video/webm"></video>
 </div>
 
 </body> 
